AlertConditionPresenceManipulation do not log errors when a manipulation is not supported